@@ -274,6 +274,12 @@ private:
     RideSelection _lastTrackDesignCountRideType{};
     int32_t _lastTrackDesignCount{};
     RideSelection _windowNewRideListItems[RideListItemsMax]{};
+    struct NewRideVariables
+    {
+        RideSelection SelectedRide;
+        RideSelection HighlightedRide;
+        uint16_t SelectedRideCountdown;
+    } _newRideVars{};
 
 public:
     static void SetOpeningPage(NewRideTabId tab)
@@ -294,7 +300,7 @@ public:
         _filter.clear();
 
         frame_no = 0;
-        new_ride.SelectedRide = { RIDE_TYPE_NULL, OBJECT_ENTRY_INDEX_NULL };
+        _newRideVars.SelectedRide = { RIDE_TYPE_NULL, OBJECT_ENTRY_INDEX_NULL };
         _lastTrackDesignCountRideType.Type = RIDE_TYPE_NULL;
         _lastTrackDesignCountRideType.EntryIndex = OBJECT_ENTRY_INDEX_NULL;
 
@@ -322,7 +328,7 @@ public:
             WidgetInvalidate(*this, WIDX_FILTER_TEXT_BOX);
         }
 
-        if (new_ride.SelectedRide.Type != RIDE_TYPE_NULL && new_ride.selected_ride_countdown-- == 0)
+        if (_newRideVars.SelectedRide.Type != RIDE_TYPE_NULL && _newRideVars.SelectedRideCountdown-- == 0)
         {
             RideSelect();
         }
@@ -336,7 +342,7 @@ public:
             // Remove highlight when mouse leaves rides list
             if (!WidgetIsHighlighted(*this, WIDX_RIDE_LIST))
             {
-                new_ride.HighlightedRide = { RIDE_TYPE_NULL, OBJECT_ENTRY_INDEX_NULL };
+                _newRideVars.HighlightedRide = { RIDE_TYPE_NULL, OBJECT_ENTRY_INDEX_NULL };
                 WidgetInvalidate(*this, WIDX_RIDE_LIST);
             }
         }
@@ -414,7 +420,7 @@ public:
 
         if (_currentTab != RESEARCH_TAB)
         {
-            RideSelection item = new_ride.HighlightedRide;
+            RideSelection item = _newRideVars.HighlightedRide;
             if (item.Type != RIDE_TYPE_NULL || item.EntryIndex != OBJECT_ENTRY_INDEX_NULL)
                 DrawRideInformation(dpi, item, windowPos + ScreenCoordsXY{ 3, height - 64 }, width - 6);
         }
@@ -440,12 +446,12 @@ public:
     void OnScrollMouseOver(int32_t scrollIndex, const ScreenCoordsXY& screenCoords) override
     {
         RideSelection item = ScrollGetRideListItemAt(screenCoords);
-        if (new_ride.HighlightedRide == item)
+        if (_newRideVars.HighlightedRide == item)
         {
             return;
         }
 
-        new_ride.HighlightedRide = item;
+        _newRideVars.HighlightedRide = item;
         Invalidate();
     }
 
@@ -457,10 +463,10 @@ public:
             return;
         }
 
-        new_ride.SelectedRide = item;
+        _newRideVars.SelectedRide = item;
 
         OpenRCT2::Audio::Play(OpenRCT2::Audio::SoundId::Click1, 0, windowPos.x + (width / 2));
-        new_ride.selected_ride_countdown = 8;
+        _newRideVars.SelectedRideCountdown = 8;
         Invalidate();
     }
 
@@ -479,9 +485,9 @@ public:
         {
             // Draw flat button rectangle
             int32_t buttonFlags = 0;
-            if (new_ride.SelectedRide == *listItem)
+            if (_newRideVars.SelectedRide == *listItem)
                 buttonFlags |= INSET_RECT_FLAG_BORDER_INSET;
-            if (new_ride.HighlightedRide == *listItem || buttonFlags != 0)
+            if (_newRideVars.HighlightedRide == *listItem || buttonFlags != 0)
                 GfxFillRectInset(
                     dpi, { coords, coords + ScreenCoordsXY{ 115, 115 } }, colours[1],
                     INSET_RECT_FLAG_FILL_MID_LIGHT | buttonFlags);
@@ -530,8 +536,8 @@ public:
     {
         _currentTab = tab;
         frame_no = 0;
-        new_ride.HighlightedRide = { RIDE_TYPE_NULL, OBJECT_ENTRY_INDEX_NULL };
-        new_ride.selected_ride_countdown = std::numeric_limits<uint16_t>::max();
+        _newRideVars.HighlightedRide = { RIDE_TYPE_NULL, OBJECT_ENTRY_INDEX_NULL };
+        _newRideVars.SelectedRideCountdown = std::numeric_limits<uint16_t>::max();
         PopulateRideList();
         RefreshWidgetSizing();
         Invalidate();
@@ -545,7 +551,7 @@ public:
 private:
     void RideSelect()
     {
-        RideSelection item = new_ride.SelectedRide;
+        RideSelection item = _newRideVars.SelectedRide;
         if (item.Type == RIDE_TYPE_NULL)
         {
             return;
